fix overflow when input is too long

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   width: 100%;
   font-size: 30px;
   text-align: center;
+  color: #03C9A9;
 }
 .inputWrap {
   width: 100%;
@@ -40,6 +41,7 @@ body {
 }
 input:focus { 
   outline:none; 
+  border-bottom:3px solid #03C9A9;
 }
 
 
@@ -51,6 +53,11 @@ input:focus {
   border: 1px #03C9A9 solid;
   color: #03C9A9;
   font-size: 18px;
+  cursor: pointer;
+}
+.inputWrap > #submit:hover {
+  color: #fff;
+  background-color: #03C9A9;
 }
 .inputWrap > #submit:focus {
   outline: 0;
@@ -58,9 +65,21 @@ input:focus {
 
 .generatedPair {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin: 0 auto;
   width: 50vw;
+  /* opacity: 1;
+  transition: 1s; */
+}
+.listWrap {
+  display: flex;
+  flex-direction: row;
+}
+.generatedPairCenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .generatedPair ul {
   width: 40%;
@@ -70,8 +89,10 @@ input:focus {
 }
 .generatedPair li {
   text-align: center;
-  height: 50px;
-  line-height: 50px;
+  height: auto;
+  word-wrap: break-word;
+  padding: 10px;
+  margin-top: 10px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
@@ -97,9 +118,6 @@ input:focus {
   cursor: pointer;
 }
 #newGame {
-  position: absolute;
-  left: 25%;
-  /* transform: translateX(-50%); */
   height: 50px;
   width: 140px;
   border-radius: 5px;
